--- a/1-Get-Historic-Data-and-Previous-Forecasts.ipynb
+++ b/1-Get-Historic-Data-and-Previous-Forecasts.ipynb
@@ -28,7 +28,7 @@
     "fnSegmentsShapefile = 'data/segments/Segments_WF - 2023-08-01.shp'\n",
     "\n",
     "# filter by PLANAREA in segments shapefile\n",
-    "filterPlanArea = ['WFRC','MAG']"
+    "filterPlanArea = ['WFRC','MAG'] # must be an array... if only single item, the still include []"
    ]
   },
   {
