Change adj mod aadt fieldname

--- a/3-Prepare-Model-Adjusted-Volumes.ipynb
+++ b/3-Prepare-Model-Adjusted-Volumes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[340 rows x 5 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "      <th>FAC_WDAVG</th>\n",
        "      <th>modAADT</th>\n",
        "      <th>aadtAdjFactor</th>\n",
-       "      <th>adjAADT</th>\n",
+       "      <th>modAADTadj</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1326,23 +1326,36 @@
        "</div>"
       ],
       "text/plain": [
-       "            SEGID   DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  adjAADT\n",
-       "0      0006_146.9   1510.7  2019     0.9840     1535          -18.0   1517.0\n",
-       "1      0006_149.9   1559.7  2019     0.9840     1585          856.0   2441.0\n",
-       "2      0006_150.6   1755.8  2019     0.9840     1784          657.0   2441.0\n",
-       "3      0006_152.6   2495.6  2019     0.9840     2536         -119.0   2417.0\n",
-       "4      0006_152.9   3725.4  2019     0.9593     3883         -124.0   3759.0\n",
-       "...           ...      ...   ...        ...      ...            ...      ...\n",
-       "23074   WFRC_8261     18.9  2050     0.0000        0            0.0      0.0\n",
-       "23075   WFRC_8263   7783.9  2050     1.0924     7125         2427.0   9552.0\n",
-       "23076   WFRC_8264  12940.8  2050     1.0924    11846            NaN      NaN\n",
-       "23077   WFRC_8265   4036.0  2050     1.0924     3694            NaN      NaN\n",
-       "23078   WFRC_8266   8362.2  2050     0.0000        0            0.0      0.0\n",
+       "            SEGID   DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  \\\n",
+       "0      0006_146.9   1510.7  2019     0.9840     1535          -18.0   \n",
+       "1      0006_149.9   1559.7  2019     0.9840     1585          856.0   \n",
+       "2      0006_150.6   1755.8  2019     0.9840     1784          657.0   \n",
+       "3      0006_152.6   2495.6  2019     0.9840     2536         -119.0   \n",
+       "4      0006_152.9   3725.4  2019     0.9593     3883         -124.0   \n",
+       "...           ...      ...   ...        ...      ...            ...   \n",
+       "23074   WFRC_8261     18.9  2050     0.0000        0            0.0   \n",
+       "23075   WFRC_8263   7783.9  2050     1.0924     7125         2427.0   \n",
+       "23076   WFRC_8264  12940.8  2050     1.0924    11846            NaN   \n",
+       "23077   WFRC_8265   4036.0  2050     1.0924     3694            NaN   \n",
+       "23078   WFRC_8266   8362.2  2050     0.0000        0            0.0   \n",
+       "\n",
+       "       modAADTadj  \n",
+       "0          1517.0  \n",
+       "1          2441.0  \n",
+       "2          2441.0  \n",
+       "3          2417.0  \n",
+       "4          3759.0  \n",
+       "...           ...  \n",
+       "23074         0.0  \n",
+       "23075      9552.0  \n",
+       "23076         NaN  \n",
+       "23077         NaN  \n",
+       "23078         0.0  \n",
        "\n",
        "[23079 rows x 7 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,13 +1364,13 @@
     "# ADJUST ALL MODEL VOLUMES BASED ON BASE YEAR ADJ FACTOR\n",
     "\n",
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
-    "dfModWithAdj['adjAADT'] = dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']\n",
+    "dfModWithAdj['modAADTadj'] = dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']\n",
     "dfModWithAdj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1400,7 @@
        "      <th>FAC_WDAVG</th>\n",
        "      <th>modAADT</th>\n",
        "      <th>aadtAdjFactor</th>\n",
-       "      <th>adjAADT</th>\n",
+       "      <th>modAADTadj</th>\n",
        "      <th>obsAADT</th>\n",
        "      <th>ModVsObs</th>\n",
        "    </tr>\n",
@@ -1446,11 +1459,11 @@
        "</div>"
       ],
       "text/plain": [
-       "           SEGID  DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  adjAADT  \\\n",
-       "1096  0202_001.5     0.0  2019     0.9840        0            0.0      0.0   \n",
-       "1786  2082_005.0     0.0  2019     1.0918        0            0.0      0.0   \n",
-       "2562  2372_000.0     0.0  2019     1.0946        0            0.0      0.0   \n",
-       "2956  2964_003.0     0.0  2019     1.0924        0            0.0      0.0   \n",
+       "           SEGID  DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  modAADTadj  \\\n",
+       "1096  0202_001.5     0.0  2019     0.9840        0            0.0         0.0   \n",
+       "1786  2082_005.0     0.0  2019     1.0918        0            0.0         0.0   \n",
+       "2562  2372_000.0     0.0  2019     1.0946        0            0.0         0.0   \n",
+       "2956  2964_003.0     0.0  2019     1.0924        0            0.0         0.0   \n",
        "\n",
        "      obsAADT  ModVsObs  \n",
        "1096      884    -884.0  \n",
@@ -1471,14 +1484,14 @@
     "\n",
     "_df3 = pd.DataFrame.merge(_df1, _df2, on='SEGID')\n",
     "\n",
-    "_df3['ModVsObs'] = _df3['adjAADT'] - _df3['obsAADT']\n",
+    "_df3['ModVsObs'] = _df3['modAADTadj'] - _df3['obsAADT']\n",
     "\n",
     "display(_df3[_df3['ModVsObs']!=0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
